media/css/products/vpn/common.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

$font-path: '/media/fonts';
$image-path: '/media/protocol/img';

@import '../../../protocol/css/includes/lib';
@import 'includes/lib';

//* -------------------------------------------------------------------------- */
// Conditional states
/* stylelint-disable declaration-no-important */

// hide content that is only shown conditionally.
.vpn-variable-pricing-block,
.js-more-countries-coming-soon {
    display: none !important;
}

// if JS is enabled then hide fixed pricing content until we know to show it.
.js .js-vpn-fixed-pricing,
.js .vpn-fixed-pricing-block {
    display: none !important;
}

// countries where VPN is available at a fixed price.
.show-vpn-fixed-pricing {
    div.js-vpn-fixed-pricing {
        display: block !important;
    }

    span.js-vpn-fixed-pricing {
        display: inline-block !important;
    }

    .vpn-fixed-pricing-block {
        display: block !important;
    }
}

// countries where VPN is available at variable pricing.
.show-vpn-variable-pricing {
    .vpn-variable-pricing-block,
    .js-vpn-variable-pricing {
        display: block !important;
    }

    .vpn-fixed-pricing-block,
    .js-vpn-pricing-fixed {
        display: none !important;
    }
}

// countries where VPN is not available.
.show-vpn-waitlist {

    .js-connect-to-countries-and-servers {
        display: none !important;
    }

    .js-more-countries-coming-soon {
        display: block !important;

        @supports(display: grid) {
            display: grid !important;
        }
    }

    .vpn-fixed-pricing-block {
        display: block !important;
    }
}
/* stylelint-enable declaration-no-important */

// fade in conditional CTA containers when they display.
.js-vpn-fixed-pricing,
.js-vpn-variable-pricing,
.js-vpn-waitlist {
    @include animation(mzp-a-fade-in 100ms ease-in 0ms 1 normal both);
}

//* -------------------------------------------------------------------------- */
// Guarantee / Availability Copy

.availability-copy,
.guarantee-copy {
    @include text-body-md;
}

.guarantee-copy {
    color: $color-vpn-brand-violet;
    font-weight: bold;
    margin-bottom: $spacing-lg;

    &:before {
        @include bidi((
            (background-position, top left, top right),
            (padding-right, $spacing-xs, padding-left, 0),
        ));
        background-image: url('/media/img/products/vpn/common/check.svg');
        background-repeat: no-repeat;
        content: '';
        display: inline-block;
        height: 16px;
        position: relative;
        top: 2px;
        width: 16px;
    }
}

.refund-policy {
    margin-bottom: 0;
}

//* -------------------------------------------------------------------------- */
// VPN Nav Button

.vpn-nav-cta {
    .mzp-c-cta-link {
        @include text-body-sm;
        display: block;
        margin-top: $spacing-lg;

        &:link,
        &:visited {
            color: $color-black;
            text-decoration: none;
        }

        &:hover,
        &:active,
        &:focus {
            text-decoration: underline;
        }
    }

    @media #{$mq-md} {
        @include bidi(((text-align, left, right),));
        margin-top: 0;

        .mzp-c-cta-link {
            @include bidi(((margin-left, $spacing-md, margin-right, 0),));
            display: inline;
        }
    }
}

//* -------------------------------------------------------------------------- */
// Page VPN Button

main .mzp-c-button.mzp-t-xl {
    @include font-size(18px);
    margin-bottom: $spacing-lg;
}

// The hover / focus color for secondary protocol button colors is the same as the
// pricing container background color, which creates an a11y issue. So set the button
// background color to white to give a better contrast change.
.vpn-pricing-variable-plans .mzp-c-button.mzp-t-secondary {
    background: $color-white;
}

//* -------------------------------------------------------------------------- */
// VPN Product Feature List

.vpn-feature-list.mzp-u-list-styled {
    @include bidi(((text-align, left, right),));
    @include text-body-xl;
    display: inline-block;
    list-style: none;
    margin-bottom: $spacing-lg;

    li {
        @include bidi((
            (background-position, top 7px left, top 7px right),
            (padding-left, (18px + $spacing-md), padding-right, 0),
        ));
        background: url('/media/img/products/vpn/common/check-black.svg') no-repeat;
    }

    &.l-columns-two {
        margin-bottom: $layout-lg;
    }

    @media #{$mq-md} {
        margin-bottom: 0;

        &.l-columns-two {
            column-count: 2;
            column-gap: $spacing-2xl;
            margin-bottom: $layout-xl;
        }
    }
}

//* -------------------------------------------------------------------------- */
// Page Footer

.vpn-footer {
    margin: 0 auto $layout-xl;
    text-align: center;

    .guarantee-copy,
    .availability-copy {
        margin-bottom: 0;
    }
}

.vpn-footer-list {
    a:link,
    a:visited {
        @include text-body-xs;
    }
}

